小镇刷题家他又来了

--- a/Pytorch/focal_loss.ipynb
+++ b/Pytorch/focal_loss.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -44,15 +44,15 @@
      "output_type": "stream",
      "text": [
       "Random Input Tensor:\n",
-      "tensor([[ 0.3367,  0.1288,  0.2345,  0.2303, -1.1229],\n",
-      "        [-0.1863,  2.2082, -0.6380,  0.4617,  0.2674],\n",
-      "        [ 0.5349,  0.8094,  1.1103, -1.6898, -0.9890]], requires_grad=True)\n",
+      "tensor([[ 0.3367,  0.1288,  0.2345],\n",
+      "        [ 0.2303, -1.1229, -0.1863],\n",
+      "        [ 2.2082, -0.6380,  0.4617]], requires_grad=True)\n",
       "\n",
       "Random Target Tensor:\n",
-      "tensor([0, 4, 3])\n",
+      "tensor([1, 2, 1])\n",
       "\n",
       "Focal Loss:\n",
-      "0.8353108763694763\n"
+      "0.35200488567352295\n"
      ]
     }
    ],
@@ -61,7 +61,7 @@
     "torch.manual_seed(42)\n",
     "\n",
     "# Define the number of classes and batch size\n",
-    "num_classes = 5\n",
+    "num_classes = 3\n",
     "batch_size = 3\n",
     "\n",
     "# Generate random input and target tensors\n",
