小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -273,6 +273,8 @@ Triplet Loss
 
 #### [https://www.zhihu.com/question/505942505/answer/2274732251](https://www.zhihu.com/question/505942505/answer/2274732251)
 
+[**深入理解推荐系统：Position Bias**](https://zoyi14.smartapps.cn/pages/note/index?origin=share&slug=9eb7b2dfa1fb&_swebfr=1&_swebFromHost=baiduboxapp)
+
 # 多任务学习
 
 #### [代码精读之MMoE](https://zhuanlan.zhihu.com/p/551786848)
