小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -599,27 +599,29 @@ class FocalLoss(nn.Module):
 
 ### [Llama 2详解](https://zhuanlan.zhihu.com/p/649756898)[重点]
 
-[大模型基础组件之分词器-万字长文全面](https://zhuanlan.zhihu.com/p/626080766)
+#### [大模型基础组件之分词器-万字长文全面](https://zhuanlan.zhihu.com/p/626080766)
 
 ### **[Llama2-Chinese](https://github.com/FlagAlpha/Llama2-Chinese)**
 
 #### [[LLM] 从实践到理论，Byte Pair Encoding(BPE) 深度调研](https://zhuanlan.zhihu.com/p/657938053)
 
-### LoRA&Prefix-Tuning&Prompt-Tuning&P-Tuning v2
+### 微调
 
-[[PPT]浅析大语言模型从预训练到微调的技术原理](https://zhuanlan.zhihu.com/p/647843722)
+#### [[PPT]浅析大语言模型从预训练到微调的技术原理](https://zhuanlan.zhihu.com/p/647843722)
 
-[【万字长文】LLaMA, ChatGLM, BLOOM的参数高效微调实践](https://zhuanlan.zhihu.com/p/635710004)
+#### [【万字长文】LLaMA, ChatGLM, BLOOM的参数高效微调实践](https://zhuanlan.zhihu.com/p/635710004)
+
+
+
+### 训练框架
+
+#### [ZeRO+DeepSpeed:微软发布的高效大规模训练套件(含详细分布式训练流程)](https://zhuanlan.zhihu.com/p/108571246)
 
 # 动动手
 
-##### [从零实现BERT、GPT及Diffusion类算法](https://zhuanlan.zhihu.com/p/624068993)
-
-
+#### [从零实现BERT、GPT及Diffusion类算法](https://zhuanlan.zhihu.com/p/624068993)
 
 #### [**Overview: The Implemented Transformer**](https://medium.com/@hunter-j-phillips/overview-the-implemented-transformer-eafd87fe9589)
 
-
-
-[Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
+#### [Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
 
