小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -611,7 +611,9 @@ class FocalLoss(nn.Module):
 
 #### [【万字长文】LLaMA, ChatGLM, BLOOM的参数高效微调实践](https://zhuanlan.zhihu.com/p/635710004)
 
+### MOE
 
+#### [图解大模型训练系列之：DeepSpeed-Megatron MoE并行训练](https://zhuanlan.zhihu.com/p/681154742)
 
 ### 训练框架
 
