小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -625,5 +625,9 @@ class FocalLoss(nn.Module):
 
 #### [**Overview: The Implemented Transformer**](https://medium.com/@hunter-j-phillips/overview-the-implemented-transformer-eafd87fe9589)
 
+### RAG 
+
+#### [Introducing Contextual Retrieval](https://www.anthropic.com/news/contextual-retrieval)
+
 #### [Attention Masks — Explanation](https://medium.com/@prudhviraju.srivatsavaya/attention-masks-explanation-b4ee2e8f8d23)
 
